--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/ZavrsnaAplikacija.csproj
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/ZavrsnaAplikacija.csproj
@@ -247,6 +247,7 @@
     <Content Include="Content\car1.jpg" />
     <Content Include="Content\car2.jpg" />
     <Content Include="Content\car3.jpg" />
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\myBootstrap.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
@@ -369,11 +370,12 @@
     <Content Include="Scripts\moment-with-locales.min.js.map" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Role\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Manage\" />
-    <Folder Include="Views\Role\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
